<resources>
    <string name="app_name">PROG3210 - Final Project</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Item name</string>
    <string name="hint_item">Enter Name</string>
    <string name="quantity">Enter Quantity</string>
    <string name="save_button">Save</string>

    <string name="grocery_name">Grocery Name</string>
    <string name="grocery_qty">Quantity</string>
    <string name="data_added">Date Added</string>
    <string name="action_quit">Quit</string>
</resources>