<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="313dp"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery_name"
                android:fontFamily="casual"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:padding="5dp"
                android:text="@string/grocery_qty"
                android:fontFamily="casual"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dataAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity"
                android:paddingTop="5dp"
                android:fontFamily="casual"
                android:text="@string/data_added"
                android:textStyle="italic" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/dataAdded"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:fontFamily="casual"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_close_clear_cancel" />
            </TableRow>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>